# unittest-or-fail

./: .gitignore  pyproject.toml  setup.py  tox.ini  unittest_or_fail.py
.github/workflows/: ci.yaml
test/: test_unittest_or_fail.py
test/fail/: test_fail.py
test/good/: test_good.py
test/no-methods/: test_no_methods.py
test/skip-all/: test_skip_all.py
test/skip-setupclass/: test_skip_setupclass.py
