[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unittest-or-fail"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
dynamic = ["version", "description"]
license = {file = "COPYING"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/mgorny/unittest-or-fail/"

[tool.flit.module]
name = "unittest_or_fail"
